--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>websocket</title>
+    <title>index</title>
 </head>
 
 <body>
 <div style="width: 500px; margin: 50px auto;">
     <div id="success" style="margin: 10px auto; background: antiquewhite;">socket未连接</div>
-    <input type="text" id="input" value=""><button id='send' style="margin-left: 5px;">发送</button>
 </div>
 <div style="width: 500px; margin: 50px auto; background: beige;">
     <div>这里是接收信息</div>
@@ -20,7 +19,7 @@
 </div>
 </body>
 <script>
-    var socket = new WebSocket('ws://127.0.0.1:8092');
+    var socket = new WebSocket('ws://127.0.0.1:8095');
     socket.onopen = function(event) {
         document.getElementById('success').innerText = '前台socket端口连接成功';
     };
@@ -36,12 +35,6 @@
             document.getElementById('msg').insertBefore(test,list);
         }
     };
-    var send = document.getElementById('send');
-    send.addEventListener('click', function() {
-        var input = document.getElementById('input').value;
-        console.log(input);
-        socket.send(input);
-    });
 </script>
 
 </html>
